fix css spacing

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ samp {
 }
 
 .glitter-text {
-  margin: 40px auto;
+  margin: 35px auto 15px auto;
   background-image: url(https://i.pinimg.com/originals/78/36/be/7836bebefc157a613f1cf99fd56edd12.gif);
   background-position: center;
   font-size: 64px;
@@ -37,6 +37,7 @@ p {
 #butterfly {
   height: 100px;
   width: 100px;
+  margin-top: 15px;
 }
 
 .container {
@@ -44,13 +45,17 @@ p {
 }
 
 #inputs {
-  margin: 30px auto;
-  width: 400px;
+  margin: 15px auto 30px auto;
+}
+
+div.nes-field {
+  width: 500px;
+  display: inline-block;
+  margin: 0px 30px;
 }
 
 .nes-field .nes-input,
 .nes-field .nes-textarea {
-  display: block;
   background: #e6c2f0;
 }
 
@@ -59,5 +64,9 @@ p {
 }
 
 #score {
-  font-size: 7rem;
+  font-size: 5rem;
+}
+
+.nes-btn {
+  margin: 30px;
 }
